# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name="ubcpdk"
description="ubcpdk pdk"
classifiers = [
    "License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent",
]
version="1.21.0"
authors = [
    {name = "gdsfactory", email = "contact@gdsfactory.com"},
]
keywords = ["python"]
license = {file = "LICENSE"}
dependencies = [
    "gdsfactory[full,tidy3d,docs]==6.49.3",
    "modes",
    "klayout",
]
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
full = [
    "gdsfactory[full,sax,tidy3d,meow]",
    "modes",
    ]

dev = [
    "pytest",
    "pytest-cov",
    "pytest_regressions",
    "femwell"
    ]
docs = [
    "jupytext",
    ]

[tool.setuptools.packages]
find = {}

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
# testpaths = ["tests"]
testpaths = ["ubcpdk/samples", "tests"]
# addopts = --tb=no
# addopts = '--tb=short'
python_files = ["ubcpdk/samples*.py", "tests/*.py"]
# python_files = ["tests/*.py"]
# norecursedirs = ["extra/*.py", 'ubcdpk/simulations/*.py']

[tool.flake8]
max-line-length = 88
max-complexity = 57
select = ["B","C","E","F","W","T4","B9"]
ignore = [ "E501", "E503", "E722", "W503", "W503", "E203", "B950", "B305", "B018", "B902", "B020", "B905"]
extend-ignore = "RST303"

exclude = [
    ".git",
    "__pycache__",
    "lib",
    "docs/source/conf.py",
    "build",
    "dist",
    ".ipynb_checkpoints",
    ".tox",
    "extra",
    "deprecated",
    ".mypy_cache",
    "venv",
    "devsim",
    ]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.setuptools.package-data]
mypkg = ["*.csv", "*.yaml"]

[tool.pydocstyle]
inherit = false
match = "(?!test).*\\.py"
add-ignore = ["D100","D101","D102","D103","D104","D203","D405","D417"]
convention = "google"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B905",  # `zip()` without an explicit `strict=` parameter
    "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
]
extend-exclude = ["docs/notebooks"]
