# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "gdsfactory", email = "contact@gdsfactory.com"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]
dependencies = [
  "gdsfactory[cad]==7.4.6",
  "gplugins[tidy3d,sax,schematic]>=0.5.0,<0.6.0"
]
description = "ubcpdk pdk"
keywords = ["python"]
license = {file = "LICENSE"}
name = "ubcpdk"
readme = "README.md"
requires-python = ">=3.10"
version = "2.1.1"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest_regressions",
  "pre-commit"
]
docs = [
  "autodoc_pydantic",
  "jupytext",
  "jupyter-book==0.15.1"
]

[tool.black]
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | env
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pydocstyle]
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D203", "D405", "D417"]
convention = "google"
inherit = false
match = "(?!test).*\\.py"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pytest.ini_options]
# testpaths = ["ubcpdk/samples", "tests"]
# addopts = --tb=no
# addopts = '--tb=short'
# python_files = ["ubcpdk/samples*.py", "tests/*.py"]
python_files = ["tests/*.py"]
testpaths = ["tests"]

[tool.ruff]
fix = true
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408"  # C408 Unnecessary `dict` call (rewrite as a literal)
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP"
]

[tool.ruff.per-file-ignores]
"docs/notebooks/11_sparameters.py" = ['E402']
"docs/notebooks/12_sim_plugins_tidy3d.py" = ['E402']
"docs/notebooks/13_sim_plugins.py" = ['E402']
"docs/notebooks/14_sax_tidy3d.py" = ['E402']
"docs/notebooks/21_schematic_driven_layout.py" = ['E402']
"docs/notebooks/31_data_analysis_mzi.py" = ['E402']
"docs/notebooks/33_data_analysis_dbr.py" = ['E402']

[tool.setuptools.package-data]
mypkg = ["*.csv", "*.yaml"]

[tool.setuptools.packages]
find = {}
