# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "gdsfactory", email = "contact@gdsfactory.com"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
dependencies = [
  "gdsfactory~=8.8.2",
  "gplugins[sax]>=1,<2"
]
description = "ubcpdk pdk"
keywords = ["python"]
license = {file = "LICENSE"}
name = "ubcpdk"
readme = "README.md"
requires-python = ">=3.11"
version = "2.6.2"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest_regressions",
  "pre-commit"
]
docs = [
  "autodoc_pydantic",
  "jupytext",
  "jupyter-book==1.0.2"
]

[tool.codespell]
ignore-words-list = "te, te/tm, te, ba, fpr, fpr_spacing, ro, nd, donot, schem"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pydocstyle]
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D203", "D405", "D417"]
convention = "google"
inherit = false
match = "(?!test).*\\.py"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pytest.ini_options]
# testpaths = ["ubcpdk/samples", "tests"]
# addopts = --tb=no
# addopts = '--tb=short'
# python_files = ["ubcpdk/samples*.py", "tests/*.py"]
python_files = ["tests/*.py"]
testpaths = ["tests"]

[tool.ruff]
fix = true
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408"  # C408 Unnecessary `dict` call (rewrite as a literal)
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP"
]

[tool.ruff.per-file-ignores]
"docs/notebooks/11_sparameters.py" = ['E402']
"docs/notebooks/12_sim_plugins_tidy3d.py" = ['E402']
"docs/notebooks/13_sim_plugins.py" = ['E402']
"docs/notebooks/14_sax_tidy3d.py" = ['E402']
"docs/notebooks/21_schematic_driven_layout.py" = ['E402']
"docs/notebooks/31_data_analysis_mzi.py" = ['E402']
"docs/notebooks/33_data_analysis_dbr.py" = ['E402']

[tool.setuptools.package-data]
mypkg = ["*.csv", "*.yaml"]

[tool.setuptools.packages]
find = {}

[tool.tbump]

[[tool.tbump.before_commit]]
cmd = "towncrier build --yes --version {new_version}"
name = "create & check changelog"

[[tool.tbump.before_commit]]
cmd = "git add CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.before_commit]]
cmd = "grep -q -F {new_version} CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "ubcpdk/__init__.py"

[[tool.tbump.file]]
src = "ubcpdk/klayout/tech/pymacros/set_menus.lym"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "2.6.2"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.towncrier]
directory = ".changelog.d"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/gdsfactory/ubc/issues/{issue})"
package = "gdsfactory"
start_string = "<!-- towncrier release notes start -->\n"
template = ".changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/gdsfactory/ubc/releases/tag/v{version}) - {project_date}"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
